--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   file_picker: ^8.1.6
   carousel_slider: ^5.0.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
